<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/loan__fragment_toolbar"
        app:navigationIcon="@drawable/ic_account_circle"
        app:title="@string/loan_number"
        app:titleTextColor="@color/white"
        app:menu="@menu/loan_fragment_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500" />

    <TextView
        android:id="@+id/loan_amount"
        android:text="@string/amount"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/loan_date"
        android:text="@string/date"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/loan_firstname"
        android:text="@string/firstname_title"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/loan_lastname"
        android:text="@string/lastname"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/loan_percent"
        android:text="@string/percent2"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/loan_period"
        android:text="@string/period"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/loan_phone_number"
        android:text="@string/phone_number"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/loan_state"
        android:text="@string/state"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>