<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        style="@style/TextAppearance.AppCompat.Headline"
        android:id="@+id/welcome_text_view"
        android:gravity="center"
        android:layout_width="match_parent"
        android:text="@string/welcome"
        android:layout_margin="12dp"
        android:layout_height="match_parent" />

    <ProgressBar
        android:layout_gravity="center"
        android:id="@+id/loading_progress_bar"
        android:layout_width="wrap_content"
        android:indeterminateDrawable="@drawable/spinner_ring"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/content_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:visibility="invisible"
            android:id="@+id/warning_text_view"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/login_warning"
            android:textColor="@color/red" />

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/login"
            android:layout_margin="12dp" />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password" />

        <LinearLayout
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/registration_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:text="@string/registration" />

            <Button
                android:layout_marginStart="6dp"
                android:id="@+id/log_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in" />
        </LinearLayout>

    </LinearLayout>


</FrameLayout>