<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="6dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/amount_title_text_view"
                android:text="@string/amount_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/amount_text_view"
                android:layout_width="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_height="wrap_content"
                android:minWidth="100dp"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="6dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/first_name_title_text_view"
                android:text="@string/firstname_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/first_name_text_view"
                android:layout_width="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_height="wrap_content"
                android:minWidth="100dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="6dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/last_name_title_text_view"
                android:text="@string/lastname_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/last_name_text_view"
                android:layout_width="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_height="wrap_content"
                android:minWidth="100dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="6dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/percent_title_text_view"
                android:text="@string/percent_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/percent_text_view"
                android:layout_width="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_height="wrap_content"
                android:text="Some text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="6dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/period_title_text_view"
                android:text="@string/period_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/period_text_view"
                android:layout_width="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_height="wrap_content"
                android:text="Some text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="6dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/phone_number_title_text_view"
                android:text="@string/phone_number_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/phone_number_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:inputType="phone"
                android:minWidth="100dp"
                tools:ignore="TextFields" />

        </LinearLayout>

        <TextView
            android:id="@+id/empty_fields_warning_text_view"
            android:text="@string/empty_fields_warning"
            android:textColor="@color/red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_gravity="center"
            android:visibility="invisible" />

        <Button
            android:id="@+id/arrange_button"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/arrange" />


    </LinearLayout>
</ScrollView>